// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/buildkite/extract extractPackageFile() adds skipReason 1`] = `
Array [
  Object {
    "currentValue": "v1.3.2.5",
    "depName": "namespace/docker-compose",
    "managerData": Object {
      "lineNumber": 5,
    },
    "skipReason": "invalid-version",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "https://github.com/buildkite/plugin-docker-compose",
    "managerData": Object {
      "lineNumber": 16,
    },
    "skipReason": "git-plugin",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "github.com/buildkite/plugin-docker-compose",
    "managerData": Object {
      "lineNumber": 23,
    },
    "skipReason": "unknown",
  },
]
`;

exports[`lib/manager/buildkite/extract extractPackageFile() extracts arrays of plugins 1`] = `
Array [
  Object {
    "currentValue": "v2.0.1",
    "datasource": "github",
    "depName": "docker-login",
    "lookupName": "buildkite-plugins/docker-login-buildkite-plugin",
    "managerData": Object {
      "lineNumber": 3,
    },
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v2.5.1",
    "datasource": "github",
    "depName": "docker-compose",
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "managerData": Object {
      "lineNumber": 5,
    },
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v2.0.1",
    "datasource": "github",
    "depName": "docker-login",
    "lookupName": "buildkite-plugins/docker-login-buildkite-plugin",
    "managerData": Object {
      "lineNumber": 11,
    },
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v2.5.1",
    "datasource": "github",
    "depName": "docker-compose",
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "managerData": Object {
      "lineNumber": 13,
    },
    "skipReason": undefined,
  },
]
`;

exports[`lib/manager/buildkite/extract extractPackageFile() extracts multiple plugins in same file 1`] = `
Array [
  Object {
    "currentValue": "v1.3.2",
    "datasource": "github",
    "depName": "docker-compose",
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "managerData": Object {
      "lineNumber": 5,
    },
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v1.3.2",
    "datasource": "github",
    "depName": "docker-compose",
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "managerData": Object {
      "lineNumber": 16,
    },
    "skipReason": undefined,
  },
]
`;

exports[`lib/manager/buildkite/extract extractPackageFile() extracts simple single plugin 1`] = `
Array [
  Object {
    "currentValue": "v2.0.0",
    "datasource": "github",
    "depName": "abc/detect-clowns",
    "lookupName": "abc/detect-clowns-buildkite-plugin",
    "managerData": Object {
      "lineNumber": 3,
    },
    "skipReason": undefined,
  },
]
`;
